# Etude-line

./: .env.example  .gitignore  .migration_done  .replit  ANALYSE_CAPACITE_MAXIMALE.md  CAPACITE_DONNEES_MAXIMALE.md  CAPACITE_FINALE_10GB_DISK.md  CORRECTION_BUGS.md  DEPLOIEMENT_RENDER.md  DIAGNOSTIC_COMPLET_29OCT2025.md  DIAGNOSTIC_SYSTEME_COMPLET.md  GUIDE_MIGRATION_PROGRESSIVE.md  NETTOYAGE_BASE_DONNEES.md  OPTIMISATIONS_100K_UTILISATEURS.md  OPTIMISATIONS_5000_USERS.md  Procfile  RAPPORT_TESTS_VIRTUELS.md  REDIS_SETUP.md  RENDER_CONFIG_GUIDE.md  RENDER_DEPLOYMENT.md  RENDER_DISK_SETUP.md  Render.yaml  SCALABILITE_50K_ETUDIANTS.md  SECURITE_TELECHARGEMENTS.md  SOLUTION_RENDER_DISK.md  VERIFICATION_OPTIMISATIONS.md  admin_cookies.txt  admin_cookies2.txt  admin_final_test.txt  admin_fix_cookies.txt  admin_test.txt  admin_test_all_correct.txt  admin_test_final.txt  admin_test_final2.txt  admin_test_final4.txt  app.py  app_production.py  cache_simple.py  check_disk_config.py  cookie_test_admin.txt  (+41 more)
attached_assets/: Pasted-Tu-es-un-assistant-de-g-n-ration-de-projet-Cr-e-un-projet-FastAPI-appel-tude-LINE-conforme-au-1756047495153_1756047495156.txt
fichiers_modifies/: INSTRUCTIONS.md  INSTRUCTIONS_V2.md  INSTRUCTIONS_V3_ETUDIANTS.md
static/: manifest.json  offline.html  sw.js
temp_repo/: .replit  GUIDE_DEPLOIEMENT_RENDER.md  main.py  models.py  package.json  pyproject.toml  requirements.txt
temp_repo/templates/: dashboard_etudiant.html  dashboard_prof.html
templates/: chapitre_detail.html  dashboard_admin.html  dashboard_etudiant.html  dashboard_prof.html  (+15 more)
(+3 files in other folders)
