[project]
name = "etude-line"
version = "1.0.0"
description = "Application éducative FastAPI pour professeurs et étudiants"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
